# anova-oven-rs

./: .gitignore  Cargo.toml  README.md
crates/anova-oven-api/: Cargo.toml
crates/anova-oven-api/src/: lib.rs
crates/anova-oven-cli/: Cargo.toml
crates/anova-oven-cli/src/: fetch_recipes.rs  firebase.rs  history.rs  main.rs
crates/anova-oven-firestore/: Cargo.toml
crates/anova-oven-firestore/src/: auth.rs  firestore.rs  lib.rs  queries.rs  recipe.rs  value.rs
crates/anova-oven-firestore/tests/: parse.rs
crates/anova-oven-pico/: Cargo.toml  rust-toolchain.toml
crates/anova-oven-pico/.cargo/: config.toml
crates/anova-oven-pico/src/: api.rs  api_client.rs  app_state.rs  backlight.rs  display.rs  events.rs  http.rs  input.rs  lcd.rs  lib.rs  logic.rs  main.rs  rng.rs  state.rs  ws.rs
crates/anova-oven-protocol/: Cargo.toml
crates/anova-oven-protocol/src/: lib.rs
crates/anova-oven-server/: Cargo.toml
crates/anova-oven-server/src/: firestore.rs  main.rs  protocol.rs
docs/: architecture.md  oven-cloud-api.md  oven-websocket-api.md
exploration-docs/: pico-network-recovery.md
