[package]
name = "anova-oven-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anova-oven-protocol = { path = "../anova-oven-protocol" }
clap = { version = "4", features = ["derive", "env"] }
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.13", features = [
  "client",
  "native-tls",
  "fastrand",
  "openssl",
] }
