[package]
  name = "anova-oven-cli"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  anova-oven-api = { path = "../anova-oven-api" }
  clap = { version = "4", features = ["derive", "env"] }
  reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
  ] }
  tokio = { version = "1", features = ["full"] }
  serde_json = "1.0"
