# Standalone workspace — this crate targets thumbv6m-none-eabi (Cortex-M0+)
# and cannot share a workspace with host-target crates due to conflicting
# critical-section features. Build from this directory:
#   cargo build --release
[workspace]

[package]
  name = "anova-oven-pico"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  anova-oven-protocol = { path = "../anova-oven-protocol", default-features = false }
  anova-oven-firestore = { path = "../anova-oven-firestore", default-features = false }
  serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
  ] }

  embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
  ] }
  embassy-rp = { version = "0.10.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp2040",
  ] }
  embassy-net = { version = "0.9.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "dns",
    "medium-ethernet",
    "proto-ipv4",
  ] }
  embassy-time = "0.5"

  embedded-alloc = "0.6"
  embedded-io-async = "0.7"

  # TLS (used directly for WebSocket, and internally by reqwless for HTTP)
  embedded-tls = { version = "0.18", default-features = false, features = ["defmt"] }

  # Force der to enable heapless feature (needed by embedded-tls rustpki, upstream bug)
  der = { version = "0.8", default-features = false, features = ["heapless"] }

  # HTTP client for Firestore REST + Firebase Auth
  reqwless = { version = "0.14", default-features = false, features = ["embedded-tls", "defmt"] }

  # WebSocket (zero-copy, embedded-io-async 0.7)
  websocketz = { version = "0.2", default-features = false }

  # RNG — rand 0.10 provides the Rng trait for websocketz;
  # rand_core 0.6 is needed for embedded-tls's CryptoRng trait
  rand = { version = "0.10", default-features = false }
  rand_core_06 = { package = "rand_core", version = "0.6", default-features = false }

  cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
  cyw43-pio = { version = "0.10.0", features = ["defmt"] }

  portable-atomic = { version = "1", features = ["critical-section"] }
  cortex-m = "0.7"
  cortex-m-rt = "0.7"
  defmt = "1.0"
  defmt-rtt = "1.1"
  panic-probe = { version = "1.0", features = ["print-defmt"] }
  static_cell = "2"

[profile.release]
  opt-level = "s"
  debug = 2
  lto = true
