# Standalone workspace — this crate targets thumbv6m-none-eabi (Cortex-M0+)
# and cannot share a workspace with host-target crates due to conflicting
# critical-section features. Build from this directory:
#   cargo build --release
[workspace]

[package]
  name = "anova-oven-pico"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  # Main branch uses embedded-hal 1.0 but is not yet published to crates.io.
  hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", branch = "master", features = ["async"] }
  embedded-hal = "1"

  anova-oven-api = { path = "../anova-oven-api", default-features = false }
  serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
  ] }

  embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
  ] }
  embassy-rp = { version = "0.10.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp2040",
  ] }
  embassy-net = { version = "0.9.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "dns",
    "medium-ethernet",
    "proto-ipv4",
  ] }
  embassy-time = "0.5"

  embedded-alloc = "0.7"
  embedded-io-async = "0.7"

  # Plain HTTP client (no TLS needed — server is on local network)
  reqwless = { version = "0.14", default-features = false, features = [
    "defmt",
  ] }

  cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
  cyw43-pio = { version = "0.10.0", features = ["defmt"] }

  portable-atomic = { version = "1", features = ["critical-section"] }
  cortex-m = "0.7"
  cortex-m-rt = "0.7"
  defmt = "1.0"
  defmt-rtt = "1.1"
  panic-probe = { version = "1.0", features = ["print-defmt"] }
  static_cell = "2"

[profile.release]
  opt-level = "s"
  debug = 2
  lto = true
