[package]
  name = "anova-oven-server"
  version = "0.1.0"
  edition = "2021"

[[bin]]
  name = "anova-oven-server"
  path = "src/main.rs"

[dependencies]
  anova-oven-api = { path = "../anova-oven-api" }
  axum = "0.8"
  tokio = { version = "1", features = ["full"] }
  reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
  ] }
  tokio-websockets = { version = "0.13", features = [
    "client",
    "native-tls",
    "fastrand",
    "openssl",
  ] }
  futures-util = { version = "0.3", features = ["sink"] }
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  http = "1"
  uuid = { version = "1", features = ["v4", "serde"] }
  tracing = "0.1"
  tracing-appender = "0.2"
  tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
